tests/readOnlyRootFilesystem/gatekeeper.yaml
../../submodules/gatekeeper-library/library/pod-security-policy/read-only-root-filesystem/samples/psp-readonlyrootfilesystem/constraint.yaml
