tests/readOnlyRootFilesystem/kubewarden.yaml
apiVersion: policies.kubewarden.io/v1alpha2
kind: ClusterAdmissionPolicy
metadata:
  name: readonlyrootfilesystem
spec:
  policyServer: default
  module: registry://ghcr.io/kubewarden/policies/readonly-root-filesystem-psp:v1.0.13
  rules:
  - apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
    operations:
    - CREATE
    - UPDATE
  mutating: false
  namespaceSelector:
    matchExpressions:
    - key: kubernetes.io/metadata.name
      operator: NotIn
      values:
      - kubewarden
