tests/readOnlyRootFilesystem/kyverno.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: psp-readonlyrootfilesystem
spec:
  validationFailureAction: Enforce
  rules:
    - name: psp-readonlyrootfilesystem
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: >-
          Containers must have .securityContext.readOnlyRootFilesystem: true
        pattern:
          spec:
            containers:
              - securityContext:
                  readOnlyRootFilesystem: true
            =(initContainers):
              - securityContext:
                  readOnlyRootFilesystem: true
            =(ephemeralContainers):
              - securityContext:
                  readOnlyRootFilesystem: true
